stop scroll bar shifting page

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ body {
     background-size: 32px 32px;
 }
 
+html {
+  overflow-y: scroll;
+}
 /* ------------------------Header Section-----------------------*/
 /* ------------------------------------------------------------ */
 
